[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { path = "../csv" }

anyhow = "1"
tokio = { version = "1.10.0", features = ["full"] }
serde = { version = "1.0.115", features = ["derive"] }
csv-async = { version = "1.2", features = ["tokio"] }
tokio-stream ={ version = "0.1", features = ["io-util"] }
futures = "0.3"
