[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
mem-store = { path = "../mem-store" }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
