[package]
name = "mem-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1.53"
futures = "0.3"
