[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1.53"
futures = "0.3"
csv-async = { version = "1.2", features = ["tokio"] }
tracing-subscriber = {version="0.2", features=["env-filter"]}
tracing-appender = "0.1"
tracing = "0.1.25"
